--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "node": "14.x"
   },
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "build": "ncc build index.js -o dist"
   },
   "keywords": [],
   "author": "",
