--- a/vercel.json
+++ b/vercel.json
@@ -8,8 +8,8 @@
     ],
     "routes": [
         {
-            "src": "/dist/(.*)",
-            "dest": "/"
+            "src": "/(.*)",
+            "dest": "/dist"
         }
     ]
 }
